--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5"
+  }
 }
