--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
+    "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
