--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "build": "webpack --config configs/webpack.config.js",
-    "start": "npm run build && node app.js"
+    "start": "npm run build && node app.js",
+    "lint": "eslint --ext js,jsx components app.js"
   },
   "repository": {
     "type": "git",
@@ -41,7 +42,10 @@
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5"
+    "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.2.1"
   }
 }
